--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -14,8 +14,8 @@ header {
              background-size: cover;
              background-position:center;
              height: 80px;
-             margin: 0;
-                        
+             padding-left: 0;
+             margin-bottom: 0;                    
             .menu {
                     width: 25px;
                     image-orientation:inherit;
