--- a/scss/partials/_mediaQ.scss
+++ b/scss/partials/_mediaQ.scss
@@ -17,11 +17,11 @@
 
     /* Arreglo de menú páginas */
 
-    section nav ul li {
+    .menu {
         padding: 2% 0;
         list-style: none;
-    }
-
+        }
+        
     /* Arreglo para página de profesionales */
 
     .profesionales {
