--- a/scss/partials/_mediaQ.scss
+++ b/scss/partials/_mediaQ.scss
@@ -81,7 +81,7 @@
         padding: 0% 2%;
     }     
  
-   .menu-titulo {
+   .menus-titulo {
         font-size: .9rem;
     }
 
@@ -109,7 +109,7 @@
         list-style: none;
         li {
            padding: 2% 5%; 
-           .menu-paginas {
+           .menus-paginas {
            font-size: 1.2rem;
            margin: 5% 1%;                       
              }
@@ -199,10 +199,10 @@
     height: 120px;
     margin: 0;
     background-size: cover;
-   .menu {
+   .menus {
         width: 40px;
         }  
-    .menu-titulo {
+    .menus-titulo {
         font-size: 1.3rem;        
         }
     }
@@ -227,7 +227,7 @@
             margin: 0 10%;
             text-align: center; 
             list-style: none;
-            .menu-paginas {
+            .menus-paginas {
             margin: 0;
             border: solid $transparente 10px;   
             }
