--- a/scss/partials/_pagIndex.scss
+++ b/scss/partials/_pagIndex.scss
@@ -2,7 +2,7 @@
 
 /** Configuraciones de secciones principales**/
 
-.menu-paginas { color: $negro;
+.menus-paginas { color: $negro;
     background-color: $transparente;
     margin: 0 25%;         
    }
