--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -17,9 +17,8 @@ header nav ul {
   background-size: cover;
   background-position: center;
   height: 80px;
-  margin: 0;
 }
-header nav ul .menu {
+header nav ul .menus {
   width: 25px;
   image-orientation: inherit;
 }
@@ -115,7 +114,7 @@ img {
 }
 
 /** Configuraciones de secciones principales**/
-.menu-paginas {
+.menus-paginas {
   color: rgb(0, 0, 0);
   background-color: rgba(121, 231, 218, 0.37);
   margin: 0 25%;
@@ -233,6 +232,12 @@ footer p {
   padding: 0;
 }
 
+/*Arreglo para acomodar padding y margin sobrante*/
+ol, ul {
+  padding-left: 0%;
+  margin-bottom: 0%;
+}
+
 /* ---- CONFIGURACIONES DE MEDIA QUERIES---- */
 /* CONFIGURACIÓN PARA SMARTPHONES */
 @media (max-width: 480px) {
@@ -245,7 +250,7 @@ footer p {
     margin: 2% 8%;
   }
   /* Arreglo de menú páginas */
-  section nav ul li {
+  .menu {
     padding: 2% 0;
     list-style: none;
   }
@@ -295,7 +300,7 @@ footer p {
     margin: 2% 0%;
     padding: 0% 2%;
   }
-  .menu-titulo {
+  .menus-titulo {
     font-size: 0.9rem;
   }
   .titulo-ppl {
@@ -321,7 +326,7 @@ footer p {
   section nav ul li {
     padding: 2% 5%;
   }
-  section nav ul li .menu-paginas {
+  section nav ul li .menus-paginas {
     font-size: 1.2rem;
     margin: 5% 1%;
   }
@@ -393,10 +398,10 @@ footer p {
     margin: 0;
     background-size: cover;
   }
-  header nav ul .menu {
+  header nav ul .menus {
     width: 40px;
   }
-  header nav ul .menu-titulo {
+  header nav ul .menus-titulo {
     font-size: 1.3rem;
   }
   /* Ajustes carrousel de img en index */
@@ -418,7 +423,7 @@ footer p {
     text-align: center;
     list-style: none;
   }
-  section nav ul li .menu-paginas {
+  section nav ul li .menus-paginas {
     margin: 0;
     border: solid rgba(121, 231, 218, 0.37) 10px;
   }
