--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -14,9 +14,8 @@ header {
              background-size: cover;
              background-position:center;
              height: 80px;
-             padding-left: 0;
-             margin-bottom: 0;                    
-            .menu {
+             
+            .menus {
                     width: 25px;
                     image-orientation:inherit;
                   }
