incorporación de SEO y últimos detalles

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -4,32 +4,32 @@
 
 header {
     nav {
-        ul { 
-             display: flex;
-             flex-direction: row;
-             align-items: center;
-             justify-content:space-around;
-             list-style: none;
-             background-image: url(../imagenes/caps\ frente2.jpg);
-             background-size: cover;
-             background-position:center;
-             height: 80px;
-             
-            .menus {
-                    width: 25px;
-                    image-orientation:inherit;
-                  }
+        ul {
+        display: grid;
+        gap: 1px;
+        justify-items: center;
+        list-style: none;
+        background-image: url(../imagenes/caps\ frente2.jpg);
+        background-size: cover;
+        background-position:center;
+        height: 100px;
+          
+        .menus {
+                width: 15px;
+                image-orientation:inherit;
+                }
                                                       
-            a { 
-               font-size: .6rem;
+        a { 
+               font-size: .5rem;
                background-color: rgba(121, 231, 218, 0.877);
                color: $negro;
                text-decoration: none;
                letter-spacing: 1px;
                border: $celestes2 double 3px;
-               padding: 5px;
+               padding: 4px;
                border-radius: 8px;
                text-align: center;
+               
                }
             }
         }
