--- a/scss/partials/_pagIndex.scss
+++ b/scss/partials/_pagIndex.scss
@@ -2,9 +2,15 @@
 
 /** Configuraciones de secciones principales**/
 
+section {
+    .p-inicio2 { margin: 0;
+        padding: 0 0 2% 0;
+        }
+}
+
 .menus-paginas { color: $negro;
     background-color: $transparente;
     margin: 0 25%;         
-   }
+    }
 
 
