--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -8,34 +8,39 @@
 
 /* Configuración menú principal */
 header nav ul {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+  display: grid;
+  gap: 1px;
+  justify-items: center;
   list-style: none;
   background-image: url(../imagenes/caps\ frente2.jpg);
   background-size: cover;
   background-position: center;
-  height: 80px;
+  height: 100px;
 }
 header nav ul .menus {
-  width: 25px;
+  width: 15px;
   image-orientation: inherit;
 }
 header nav ul a {
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   background-color: rgba(121, 231, 218, 0.877);
   color: rgb(0, 0, 0);
   text-decoration: none;
   letter-spacing: 1px;
   border: rgb(220, 254, 250) double 3px;
-  padding: 5px;
+  padding: 4px;
   border-radius: 8px;
   text-align: center;
 }
 
-/** Configuraciones de titulos principal de las páginas **/
-h1 {
+/** Configuraciones de main y de títulos principales de las páginas **/
+main {
+  text-align: center;
+  background-image: url(../imagenes/fondo-ppl.jpg);
+  background-size: 100px 100px;
+  padding-bottom: 6%;
+}
+main .titulo-ppl, main h1 {
   text-align: center;
   background-color: rgb(220, 254, 250);
   line-height: 150%;
@@ -43,9 +48,12 @@ h1 {
   margin: 0;
   padding: 0;
   font-family: "Times New Roman", Times, serif;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   text-decoration: none;
   font-weight: bold;
+}
+main h1 {
+  font-size: 1.2rem;
 }
 
 /* ANIMACIÓN HECHA CON ANIMISTA */
@@ -81,9 +89,10 @@ h1 {
   }
 }
 h2, h3 {
-  font-size: 0.9rem;
-  padding: 1% 2%;
+  font-size: 0.8rem;
+  padding: 1% 1%;
   margin-top: 2%;
+  margin-bottom: 0;
   text-align: center;
   justify-content: center;
   font-style: none;
@@ -101,19 +110,17 @@ p {
   text-align: center;
 }
 
-/*Configuación fondo de main*/
-main {
-  text-align: center;
-  background-image: url(../imagenes/fondo-ppl.jpg);
-  background-size: 100px 100px;
-}
-
 /* Configuración de imágenes */
 img {
   width: 150px;
 }
 
 /** Configuraciones de secciones principales**/
+section .p-inicio2 {
+  margin: 0;
+  padding: 0 0 2% 0;
+}
+
 .menus-paginas {
   color: rgb(0, 0, 0);
   background-color: rgba(121, 231, 218, 0.37);
@@ -186,54 +193,82 @@ img {
   flex-direction: column;
   text-align: center;
   justify-items: center;
+  gap: 5px;
   background-color: rgb(121, 231, 218);
-  margin: 0 15%;
+  margin: 3% 15%;
   padding: 1%;
   border-style: double;
-  border-radius: 3%;
+  border-radius: 40px;
   border-color: rgb(50, 196, 188);
   background-image: radial-gradient(rgba(121, 231, 218, 0.37), rgb(220, 254, 250));
+  font-size: 1.2rem;
+  letter-spacing: 1px;
 }
 .formu-padre .formu-hijo {
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-items: center;
-  padding: 10px;
-  border-style: groove;
-  border-color: rgba(154, 219, 216, 0.219);
-  border-radius: 5%;
+  padding: 5px;
+  margin: 2px 15px;
+}
+.formu-padre .formu-hijo select, .formu-padre .formu-hijo input, .formu-padre .formu-hijo textarea {
+  padding: 5px;
+  border-radius: 40px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.864);
+  border: 2px solid rgb(121, 231, 218);
+  font-size: 16px;
 }
 .formu-padre .boton {
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
-  margin: 4% 25%;
-  padding: 1%;
-  background-color: white;
-  border: solid 4px rgb(121, 231, 218);
-  border-radius: 5%;
+  margin: 4% 15%;
+  padding: 2%;
+  background-color: rgb(121, 231, 218);
+  border: solid 4px rgb(220, 254, 250);
+  border-radius: 35px;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
 }
 
 /* Configuración del footer */
+footer p {
+  padding: 1%;
+  font-family: "Times New Roman", Times, serif;
+  background-color: rgb(121, 231, 218);
+}
+footer p .p-maps {
+  font-size: 0.7rem;
+  font-family: "Times New Roman", Times, serif;
+  padding: 1% 0;
+  margin: 1% 0;
+  background-color: rgba(121, 231, 218, 0.37);
+}
 footer .redes {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  justify-content: space-evenly;
   background-color: rgb(220, 254, 250);
-  padding: 8px 1px;
+  padding: 10px 0px;
 }
 footer .redes img {
   width: 25px;
 }
-footer p {
-  text-align: center;
-  background-color: rgb(121, 231, 218);
-  height: 3vh;
-  padding: 0;
+footer .img-maps {
+  background-color: rgb(220, 254, 250);
+  margin: 0;
+}
+footer .img-maps .enlace-maps {
+  width: 380px;
+  margin: 5%;
 }
 
 /*Arreglo para acomodar padding y margin sobrante*/
-ol, ul {
+ul {
   padding-left: 0%;
   margin-bottom: 0%;
 }
@@ -241,8 +276,7 @@ ol, ul {
 /* ---- CONFIGURACIONES DE MEDIA QUERIES---- */
 /* CONFIGURACIÓN PARA SMARTPHONES */
 @media (max-width: 480px) {
-  /* body {background-color:brown;
-  }  (Usado para diferenciar pantallas en la edición responsive) */
+  /* body {background-color:brown;}  (Usado para diferenciar pantallas en la edición responsive) */
   /* Arreglo detalles página de inicio */
   .p-inicio {
     text-align: justify;
@@ -258,14 +292,24 @@ ol, ul {
   .profesionales {
     font-family: "Times New Roman", Times, serif;
     background-color: rgba(121, 231, 218, 0.37);
-    margin: 0 25%;
-    padding: 3%;
+    margin: 5% 10%;
+    padding: 6%;
+    border-radius: 15px;
+  }
+  .profesionales .card-img-top {
+    border-radius: 15px 15px 0 0;
+  }
+  .profesionales .prof-card {
+    border-radius: 30px;
+    margin-bottom: 6%;
   }
   .profesionales .profe-titu {
     font-size: 1.5rem;
+    font-weight: bold;
   }
   .profesionales .profe-esp {
     font-size: 1rem;
+    font-weight: bold;
   }
   .profesionales .profe-txt {
     font-size: 0.6rem;
@@ -273,142 +317,216 @@ ol, ul {
   }
   .profesionales .btn-prof {
     font-size: 0.6rem;
-    background-color: rgba(121, 231, 218, 0.37);
-    margin: 10%;
-  }
-  /* Ajuste para footer*/
-  footer p {
-    padding-top: 2.5%;
+    background-color: rgb(121, 231, 218);
+    margin: 5%;
+    border-radius: 30px;
+    letter-spacing: 1px;
+    font-weight: bold;
   }
 }
 /* CONFIGURACIÓN PARA TABLETS */
 @media (min-width: 481px) and (max-width: 978px) {
-  /* body {
-       background-color: rgb(60, 50, 205);
+  /* body { background-color: rgb(60, 50, 205);
   } (Usado para diferenciar pantallas en la edición responsive) */
   /* Arreglo para menu principal */
   header nav ul {
-    height: 110px;
+    height: 100px;
     margin: 0;
+    display: flex;
+    justify-content: center;
+  }
+  header nav ul .menus {
+    width: 50px;
+    margin: 3% 40%;
+  }
+  header nav ul .menus-titulo {
+    font-size: 1.7rem;
+    font-family: "Times New Roman", Times, serif;
+    padding: 2% 4%;
+    margin: 1% 15%;
   }
   /* Arreglo detalles de textos página de inicio */
   h2, h3 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
   }
   p {
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin: 2% 0%;
     padding: 0% 2%;
   }
-  .menus-titulo {
-    font-size: 0.9rem;
+  main .titulo-ppl {
+    font-size: 2.5rem;
   }
-  .titulo-ppl {
+  main h1 {
     font-size: 2rem;
   }
-  .p-inicio {
+  main .p-inicio {
     text-align: justify;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     padding: 2% 2%;
-    margin: 2% 10%;
+    margin: 2% 5%;
   }
-  .p-inicio2 {
+  main .p-inicio2 {
     margin: 0;
     padding: 0;
   }
   /* Arreglos para secciones principales en index */
   section nav ul {
-    display: flex;
     flex-direction: row;
-    justify-content: center;
+    display: flex;
     list-style: none;
+    justify-content: center;
   }
   section nav ul li {
-    padding: 2% 5%;
+    padding: 2% 6%;
   }
   section nav ul li .menus-paginas {
-    font-size: 1.2rem;
-    margin: 5% 1%;
+    font-size: 1.6rem;
+    margin: 0 1%;
   }
   section nav ul li .img-prof {
-    width: 230px;
+    width: 280px;
   }
   section nav ul li .img-consul {
-    width: 200px;
+    width: 240px;
   }
   /* Arreglo para página de profesionales */
   .profesionales {
-    font-size: 1.3rem;
     font-family: "Times New Roman", Times, serif;
     background-color: rgba(121, 231, 218, 0.37);
-    margin: 0 15%;
+    margin: 2%;
     padding: 3%;
+    border-radius: 50px;
+  }
+  .profesionales .card-img-top {
+    border-radius: 25px 25px 0 0;
+  }
+  .profesionales .prof-card {
+    border-radius: 30px;
+    margin-bottom: 5%;
+  }
+  .profesionales .profe-titu {
+    color: rgb(121, 231, 218);
+    font-size: 2.2rem;
+    text-shadow: 3px -1px 0 black;
+    font-weight: bold;
+  }
+  .profesionales .profe-esp {
+    font-size: 1.5rem;
+    text-decoration: underline;
+  }
+  .profesionales .profe-txt {
+    font-size: 1.2rem;
+    text-align: justify;
   }
   .profesionales .btn-prof {
-    background-color: rgba(121, 231, 218, 0.37);
+    background-color: rgb(121, 231, 218);
     margin: 4%;
-    font-size: 0.7rem;
+    padding: 3% 12%;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    border-radius: 20px;
+    font-weight: bold;
+  }
+  .profesionales .btn-ajt {
+    margin-top: 12%;
   }
   /* Ajustes parapágina de formularios */
   .formu-padre {
-    margin: 0 20%;
+    margin: 2% 12%;
+    font-family: "Times New Roman", Times, serif;
+    letter-spacing: 1px;
   }
   .formu-padre .formu-hijo {
-    margin: 0 15%;
+    margin: 0 10%;
+    font-size: 1.9rem;
+  }
+  .formu-padre .formu-hijo select, .formu-padre .formu-hijo textarea, .formu-padre .formu-hijo input {
+    padding: 15px;
+    font-size: 1.2rem;
   }
   .formu-padre .boton {
-    margin: 4% 30%;
+    margin: 4% 20%;
     padding: 2%;
+    font-size: 1.5rem;
   }
   /* Ajustes para footer */
-  footer p {
+  footer .redes {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    justify-content: space-around;
+  }
+  footer .redes img {
+    width: 50px;
+  }
+  footer .img-maps .enlace-maps {
+    width: 600px;
+    height: 220px;
+    margin: 2% 15%;
+  }
+  p {
+    font-size: 1.5rem;
     margin: 0;
-    padding-top: 0.5%;
+    padding: 1.5% 0;
   }
 }
 /* CONFIGURACIÓN PARA DESKTOPS */
 @media (min-width: 979px) and (max-width: 1920px) {
-  /* body {
-    background-color: yellowgreen;
-    } 
+  /* body { background-color: yellowgreen;} 
     (Usado para diferenciar pantallas en la edición responsive) */
   /* Ajustes para textos */
-  .titulo-ppl {
-    font-size: 2.5rem;
+  main {
+    padding-bottom: 5%;
   }
-  h2, h3 {
-    font-size: 1.5rem;
+  main .titulo-ppl {
+    font-size: 2.2rem;
+    letter-spacing: 5px;
+  }
+  main h1 {
+    font-size: 1.9rem;
+    padding: 0%;
+  }
+  main h2, main h3 {
+    font-size: 1.7rem;
     margin: 1% 0;
   }
-  p {
-    font-size: 1.2rem;
-    padding: 0 1%;
-    margin: 1% 0;
-  }
-  .p-inicio {
-    margin: 1% 15%;
+  main .p-inicio {
+    margin: 1% 8%;
     padding: 1% 0;
-    border: transparent 5px solid;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     text-align: justify;
+  }
+  main .p-inicio2 {
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 1% 0;
   }
   /* Ajustes para menú todas las páginas */
   header nav ul {
-    height: 120px;
+    height: 100px;
     margin: 0;
     background-size: cover;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
   }
   header nav ul .menus {
     width: 40px;
   }
   header nav ul .menus-titulo {
+    font-family: "Times New Roman", Times, serif;
     font-size: 1.3rem;
   }
   /* Ajustes carrousel de img en index */
   .carou-img {
     background-color: rgba(220, 254, 250, 0.557);
     margin: 0;
-    padding: 2% 8%;
+    padding: 2% 5%;
   }
   /* Ajustes de menú páginas */
   section nav ul {
@@ -424,39 +542,58 @@ ol, ul {
     list-style: none;
   }
   section nav ul li .menus-paginas {
+    background-color: rgb(121, 231, 218);
     margin: 0;
-    border: solid rgba(121, 231, 218, 0.37) 10px;
+    border: solid rgb(121, 231, 218) 10px;
   }
   section nav ul li .img-prof {
     width: 300px;
   }
   section nav ul li .img-consul {
-    width: 260px;
+    width: 280px;
+    height: 250px;
   }
   /* Arreglo para página de profesionales */
   .profesionales {
     font-family: "Times New Roman", Times, serif;
     background-color: rgba(121, 231, 218, 0.37);
-    margin: 0 25%;
-    padding: 2%;
-    border: solid rgb(254, 255, 253) 15px;
+    margin: 0 3%;
+    padding: 2% 1%;
+    border: double rgb(254, 255, 253) 15px;
+    border-radius: 15px;
+  }
+  .profesionales .card-img-top {
+    border-radius: 25px 25px 0 0;
+  }
+  .profesionales .prof-card {
+    border-radius: 30px;
+    margin-bottom: 5%;
   }
   .profesionales .profe-titu {
-    font-size: 1.7rem;
+    color: rgb(121, 231, 218);
+    font-size: 2rem;
+    text-shadow: 3px -1px 0 black;
+    font-weight: bold;
   }
   .profesionales .profe-esp {
     font-size: 1.3rem;
   }
   .profesionales .profe-txt {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    text-align: justify;
   }
   .profesionales .btn-prof {
-    background-color: rgba(121, 231, 218, 0.37);
-    margin: 3%;
+    background-color: rgb(121, 231, 218);
+    margin: 4%;
+    border-radius: 15px;
+    font-weight: bold;
   }
   .profesionales .btn-prof:hover {
-    background-color: rgb(220, 254, 250);
+    background-color: rgba(121, 231, 218, 0.37);
     transform: scale(1.2, 1.3);
+  }
+  .profesionales .btn-aj {
+    margin-top: 10.5%;
   }
   /* Ajustes para página de formularios*/
   .formu-padre {
@@ -476,16 +613,24 @@ ol, ul {
   /* Ajustes para footer*/
   footer .redes {
     display: flex;
-    justify-content: end;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    justify-content: space-around;
   }
   footer .redes img {
-    width: 40px;
+    width: 60px;
   }
-  footer p {
-    align-content: center;
+  footer .img-maps .enlace-maps {
+    width: 1000px;
+    height: 220px;
+    margin: 1.5% 15% 1% 12%;
+  }
+  p {
+    font-size: 1.8rem;
     margin: 0;
-    padding: 0;
-    height: 5vh;
+    padding: 1.5% 0;
   }
 }
 
