--- a/scss/partials/_txt-img.scss
+++ b/scss/partials/_txt-img.scss
@@ -1,8 +1,14 @@
 @use "variables" as*; 
 
-/** Configuraciones de titulos principal de las páginas **/
+/** Configuraciones de main y de títulos principales de las páginas **/
 
-h1 {
+main { 
+    text-align: center;
+    background-image: url(../imagenes/fondo-ppl.jpg);
+    background-size: 100px 100px;
+    padding-bottom: 6%;
+       
+    .titulo-ppl {
     text-align: center;
     background-color: $celestes2;
     line-height: 150%;
@@ -10,10 +16,16 @@ h1 {
     margin: 0;
     padding: 0;
     font-family: $font;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-decoration:none;
     font-weight: bold;
     }
+
+    h1 { @extend .titulo-ppl;
+        font-size: 1.2rem;
+        }
+
+}
 
   /* ANIMACIÓN HECHA CON ANIMISTA */
 .titulo-animacion {
@@ -51,9 +63,10 @@ h1 {
 
 
 h2 {
-    font-size: .9rem;
-    padding: 1% 2%;
+    font-size: .8rem;
+    padding: 1% 1%;
     margin-top: 2%;
+    margin-bottom: 0;
     text-align: center;
     justify-content: center;
     font-style: none;
@@ -74,13 +87,6 @@ p {  font-size: .6rem;
      text-align: center;
     }    
     
-/*Configuación fondo de main*/
-
-main { text-align: center;
-    background-image: url(../imagenes/fondo-ppl.jpg);
-    background-size: 100px 100px;           
-}
-
 /* Configuración de imágenes */
 
 img { 
